--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --fix",
     "format": "prettier --write src/",
     "check": "tsno run ./scripts/check.ts",
+    "lint:style": "stylelint **/*.{vue,css}",
     "lint:stage": "lint-staged",
     "commit": "git-cz",
     "prepare": "husky install",
@@ -16,7 +17,8 @@
   },
   "lint-staged": {
     "*": "prettier --write",
-    "*.{vue,ts}": "eslint --fix"
+    "*.{vue,ts}": "eslint --fix",
+    "*.{html,vue,css,sass,scss}": "stylelint --fix"
   },
   "config": {
     "commitizen": {
@@ -28,6 +30,7 @@
     "Prism": "^2.0.0",
     "fast-glob": "^3.3.1",
     "highlight.js": "^11.8.0",
+    "sass": "^1.69.5",
     "view-ui-plus": "^1.3.14",
     "vue": "^3.3.4"
   },
