--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "commit": "git-cz",
     "prepare": "husky install",
     "commitlint": "commitlint --edit",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist -r https://github.com/wAngDna/knowledge-summary.git -b gh-pages"
   },
   "homepage": "http://wAngDna.github.io/knowledge-summary",
   "lint-staged": {
@@ -29,10 +29,11 @@
   },
   "dependencies": {
     "@kangc/v-md-editor": "^2.3.17",
-    "Prism": "^2.0.0",
+    "axios": "^1.6.1",
     "babel-runtime": "^6.26.0",
     "fast-glob": "^3.3.1",
     "highlight.js": "^11.8.0",
+    "Prism": "^2.0.0",
     "sass": "^1.69.5",
     "view-ui-plus": "^1.3.14",
     "vue": "^3.3.4"
@@ -59,6 +60,7 @@
     "eslint": "8.45.0",
     "eslint-plugin-cypress": "2.13.3",
     "eslint-plugin-vue": "9.15.1",
+    "gh-pages": "^6.0.0",
     "husky": "8.0.3",
     "jsdom": "22.1.0",
     "lint-staged": "13.2.3",
