--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "commit": "git-cz",
     "prepare": "husky install",
     "commitlint": "commitlint --edit",
-    "deploy": "gh-pages -d dist -r https://github.com/wAngDna/knowledge-summary.git -b gh-pages"
+    "deploy": "gh-pages -d dist -r https://github.com/wAngDna/knowledge-summary.git -b gh-pages",
+    "push": "tsno run ./scripts/syncgithub.ts all",
+    "push-gitee": "tsno run ./scripts/syncgithub.ts gitee",
+    "push-github": "tsno run ./scripts/syncgithub.ts github"
   },
   "homepage": "https://wAngDna.github.io/knowledge-summary",
   "lint-staged": {
@@ -31,8 +34,10 @@
     "@kangc/v-md-editor": "^2.3.17",
     "axios": "^1.6.1",
     "babel-runtime": "^6.26.0",
+    "commander": "^11.1.0",
     "fast-glob": "^3.3.1",
     "highlight.js": "^11.8.0",
+    "inquirer": "^9.2.12",
     "Prism": "^2.0.0",
     "sass": "^1.69.5",
     "view-ui-plus": "^1.3.14",
