--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "postcss-html": "^1.5.0",
     "postcss-scss": "^4.0.9",
     "prettier": "3.0.0",
+    "rollup-plugin-visualizer": "^5.9.2",
     "start-server-and-test": "^2.0.0",
     "stylelint": "15.10.2",
     "stylelint-config-html": "1.1.0",
